force-app/main/default/objects/Loan_Version__c/Loan_Version__c.object-meta.xml
<CustomObject>
    <label>Loan Version</label>
    <nameField>
        <label>Loan Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>