force-app/main/default/objects/Loan_Version__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <formula>TEXT(Deal__r.Amortization_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amortization Term</label>
    <type>Text</type>
</CustomField>