force-app/main/default/objects/Loan_Version__c/fields/Bridge_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Payoff__c</fullName>
    <label>Bridge Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>