force-app/main/default/objects/Loan_Version__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <label>Cash Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>