force-app/main/default/objects/Loan_Version__c/fields/Closer_Email__c.field-meta.xml
<CustomField>
    <fullName>Closer_Email__c</fullName>
    <label>Closer Email</label>
    <type>Email</type>
</CustomField>