force-app/main/default/objects/Loan_Version__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <formula>Deal__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>