force-app/main/default/objects/Loan_Version__c/fields/Closing_Date_Tax_Reserve_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date_Tax_Reserve_Deposit__c</fullName>
    <label>Closing Date Tax Reserve Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>