force-app/main/default/objects/Loan_Version__c/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <formula>Deal__r.Deal_Loan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Loan Number</label>
    <type>Text</type>
</CustomField>