force-app/main/default/objects/Loan_Version__c/fields/Deposit_Collected__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Collected__c</fullName>
    <label>Deposit Collected</label>
    <type>Date</type>
</CustomField>