force-app/main/default/objects/Loan_Version__c/fields/Deposit_Lender_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Lender_Out_of_Pocket__c</fullName>
    <label>Lender Diligence and Out of Pocket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>