force-app/main/default/objects/Loan_Version__c/fields/Final_Credit_Spread__c.field-meta.xml
<CustomField>
    <fullName>Final_Credit_Spread__c</fullName>
    <label>Final Spread</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>