force-app/main/default/objects/Loan_Version__c/fields/Final_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>