force-app/main/default/objects/Loan_Version__c/fields/Final_Swap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Swap_Rate__c</fullName>
    <label>Final Swap Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>