force-app/main/default/objects/Loan_Version__c/fields/Finalized__c.field-meta.xml
<CustomField>
    <fullName>Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalized</label>
    <type>Checkbox</type>
</CustomField>