force-app/main/default/objects/Loan_Version__c/fields/First_Tax_Installment_Due__c.field-meta.xml
<CustomField>
    <fullName>First_Tax_Installment_Due__c</fullName>
    <label>1st Tax Installment Due</label>
    <type>TextArea</type>
</CustomField>