force-app/main/default/objects/Loan_Version__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>Deal__r.Deal_Loan_Number__c + &apos; / &apos; + Deal__r.Name + &apos; / &apos; + Borrower__c + &apos; / &apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>