force-app/main/default/objects/Loan_Version__c/fields/Holdback_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Reserve__c</fullName>
    <description>Monthly Debt Service Payment</description>
    <inlineHelpText>For an Interest Only Loan, this may not match the Model.  The Monthly Debt Service in the Model will use an average days in the month.  The Schedule of Lender Costs will be based on the number of days in the month that the Loan closes.</inlineHelpText>
    <label>Monthly Debt Service Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>