force-app/main/default/objects/Loan_Version__c/fields/Holdback_Reserve_Month_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Reserve_Month_Multiplier__c</fullName>
    <label>Monthly Debt Service Payment Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>