force-app/main/default/objects/Loan_Version__c/fields/Holdback_Reserve_Override__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Reserve_Override__c</fullName>
    <label>Monthly Debt Service Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>