force-app/main/default/objects/Loan_Version__c/fields/Indicative_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indicative_Rate__c</fullName>
    <label>Indicative Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>