force-app/main/default/objects/Loan_Version__c/fields/Initial_Monthly_Tax_Reserve_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Initial_Monthly_Tax_Reserve_Deposit__c</fullName>
    <label>Initial Monthly Tax Reserve Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>