force-app/main/default/objects/Loan_Version__c/fields/InitialMonthlyInsuranceReserveDeposit__c.field-meta.xml
<CustomField>
    <fullName>InitialMonthlyInsuranceReserveDeposit__c</fullName>
    <label>Initial Monthly Ins. / Reserve Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>