force-app/main/default/objects/Loan_Version__c/fields/Installment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Installment_Comment__c</fullName>
    <label>Installment Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>