force-app/main/default/objects/Loan_Version__c/fields/Interest_Only__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only__c</fullName>
    <label>Interest Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>