force-app/main/default/objects/Loan_Version__c/fields/IO_Term__c.field-meta.xml
<CustomField>
    <fullName>IO_Term__c</fullName>
    <formula>TEXT(Deal__r.IO_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IO Term</label>
    <type>Text</type>
</CustomField>