force-app/main/default/objects/Loan_Version__c/fields/Legal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fee__c</fullName>
    <label>Legal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>