force-app/main/default/objects/Loan_Version__c/fields/Lender_Credit__c.field-meta.xml
<CustomField>
    <fullName>Lender_Credit__c</fullName>
    <label>Lender Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>