force-app/main/default/objects/Loan_Version__c/fields/Lender_Credit_Description__c.field-meta.xml
<CustomField>
    <fullName>Lender_Credit_Description__c</fullName>
    <label>Lender Credit Description</label>
    <length>75</length>
    <type>Text</type>
</CustomField>