force-app/main/default/objects/Loan_Version__c/fields/Loan_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Agreement_Name__c</fullName>
    <label>Loan Agreement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>