force-app/main/default/objects/Loan_Version__c/fields/Loan_Fees_JSON__c.field-meta.xml
<CustomField>
    <fullName>Loan_Fees_JSON__c</fullName>
    <label>Loan Fees JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>