force-app/main/default/objects/Loan_Version__c/fields/Loan_Version_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Loan_Version_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Version Emailed</label>
    <type>Checkbox</type>
</CustomField>