force-app/main/default/objects/Loan_Version__c/fields/Loan_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Version_Number__c</fullName>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>