force-app/main/default/objects/Loan_Version__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <label>Stated Maturity Date</label>
    <type>Date</type>
</CustomField>