force-app/main/default/objects/Loan_Version__c/fields/Monthly_Cap_Ex__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cap_Ex__c</fullName>
    <label>Monthly Cap Ex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>