force-app/main/default/objects/Loan_Version__c/fields/Monthly_Interest_Rate_Cap_Constants__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest_Rate_Cap_Constants__c</fullName>
    <label>Monthly Interest Rate Cap Constants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>