force-app/main/default/objects/Loan_Version__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>