force-app/main/default/objects/Loan_Version__c/fields/Monthly_Tax__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Tax__c</fullName>
    <label>Monthly Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>