force-app/main/default/objects/Loan_Version__c/fields/NameDatePropertyManagementAgreemeement__c.field-meta.xml
<CustomField>
    <fullName>NameDatePropertyManagementAgreemeement__c</fullName>
    <label>Name Date Property Management Agrmt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>