force-app/main/default/objects/Loan_Version__c/fields/Net_Proceeds_to_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds_to_Borrower__c</fullName>
    <label>Net Proceeds to Borrower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>