force-app/main/default/objects/Loan_Version__c/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <label>Closing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>