force-app/main/default/objects/Loan_Version__c/fields/Origination_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Percentage__c</fullName>
    <label>Origination Fee Percentage</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>