force-app/main/default/objects/Loan_Version__c/fields/Pledgor__c.field-meta.xml
<CustomField>
    <fullName>Pledgor__c</fullName>
    <label>Pledgor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>