force-app/main/default/objects/Loan_Version__c/fields/Principal_Amortization_Period__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amortization_Period__c</fullName>
    <description>Used for the output on the Loan Agreement</description>
    <formula>IF( Interest_Only__c = &apos;Yes&apos;,
&apos;None&apos;,
&apos;30 years&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is Interest Only, then display as &quot;None&quot; else this will be &quot;30&quot;</inlineHelpText>
    <label>Principal Amortization Period</label>
    <type>Text</type>
</CustomField>