force-app/main/default/objects/Loan_Version__c/fields/Proceeds_Paid_To_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Proceeds_Paid_To_Escrow__c</fullName>
    <label>Corevest Proceeds Paid to Escrow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>