force-app/main/default/objects/Loan_Version__c/fields/Production_Analyst_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_Analyst_Email__c</fullName>
    <label>Production Analyst Email</label>
    <type>Email</type>
</CustomField>