force-app/main/default/objects/Loan_Version__c/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <label>Recourse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recourse</fullName>
            </value>
            <value>
                <fullName>Non-Recourse</fullName>
            </value>
            <value>
                <fullName>Non-Recourse (No Cash Management)</fullName>
            </value>
            <value>
                <fullName>Non-Recourse (Springing Cash Management)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>