force-app/main/default/objects/Loan_Version__c/fields/Required_DSCR_Non_Recourse_Only__c.field-meta.xml
<CustomField>
    <fullName>Required_DSCR_Non_Recourse_Only__c</fullName>
    <label>Required DSCR (Non-Recourse Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>