force-app/main/default/objects/Loan_Version__c/fields/Required_Holdback_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Required_Holdback_Reserve__c</fullName>
    <label>Holdback Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>