force-app/main/default/objects/Loan_Version__c/fields/Required_Rent_to_Debt_Service_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Required_Rent_to_Debt_Service_Ratio__c</fullName>
    <label>Required Rent to Debt Service Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>