force-app/main/default/objects/Loan_Version__c/fields/Reserve_Cap_Ex__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Cap_Ex__c</fullName>
    <label>Reserve Cap Ex</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>