force-app/main/default/objects/Loan_Version__c/fields/Reserve_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Insurance__c</fullName>
    <label>Reserve Insurance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>