force-app/main/default/objects/Loan_Version__c/fields/Reserve_Tax__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Tax__c</fullName>
    <label>Reserve Tax</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>