force-app/main/default/objects/Loan_Version__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>