force-app/main/default/objects/Loan_Version__c/fields/Stub_Interest__c.field-meta.xml
<CustomField>
    <fullName>Stub_Interest__c</fullName>
    <label>Stub Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>