force-app/main/default/objects/Loan_Version__c/fields/Swap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Swap_Rate__c</fullName>
    <label>Swap/Treasury Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>