force-app/main/default/objects/Loan_Version__c/fields/Tax_Payment_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Tax_Payment_Recurrence__c</fullName>
    <label>Tax Payment Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-annual</fullName>
            </value>
            <value>
                <fullName>Bi-monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Tri-annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>