force-app/main/default/objects/Loan_Version__c/fields/Taxes_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Paid_at_Closing__c</fullName>
    <label>Taxes Paid at Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid at closing</fullName>
            </value>
            <value>
                <fullName>Due outside of 90 days</fullName>
            </value>
            <value>
                <fullName>URGENT: Due within 90 days and funds sent to Berkadia for payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>