force-app/main/default/objects/Loan_Version__c/fields/Term_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_Type__c</fullName>
    <formula>TEXT(Deal__r.Term_Loan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Loan Type</label>
    <type>Text</type>
</CustomField>