force-app/main/default/objects/Loan_Version__c/fields/Total_Annual_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Insurance__c</fullName>
    <label>Annual Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>