force-app/main/default/objects/Loan_Version__c/fields/Total_Lender__c.field-meta.xml
<CustomField>
    <fullName>Total_Lender__c</fullName>
    <label>Total Lender</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>