force-app/main/default/objects/Loan_Version__c/fields/Total_Reserve_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserve_at_Closing__c</fullName>
    <label>Total Reserve at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>