force-app/main/default/objects/Loan_Version__c/fields/Total_Sources__c.field-meta.xml
<CustomField>
    <fullName>Total_Sources__c</fullName>
    <label>Total Sources</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>