force-app/main/default/objects/Loan_Version__c/fields/Total_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Total_Third_Party__c</fullName>
    <label>Total Third Party</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>