force-app/main/default/objects/Loan_Version__c/fields/Underwriter_Email__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Email__c</fullName>
    <label>Underwriter Email</label>
    <type>Email</type>
</CustomField>