force-app/main/default/objects/Loan_Version__c/fields/Underwriter_Vacancy_and_Credit_Loss_Perc__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Vacancy_and_Credit_Loss_Perc__c</fullName>
    <label>Underwriter Vacancy and Credit Loss %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>