force-app/main/default/objects/Loan_Version__c/fields/X2nd_Underwriter_Email__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Underwriter_Email__c</fullName>
    <label>2nd Underwriter Email</label>
    <type>Email</type>
</CustomField>