force-app/main/default/objects/Loan_Version__c/fields/YM_Prepayment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>YM_Prepayment_Penalty__c</fullName>
    <label>YM / Prepayment Penalty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>