force-app/main/default/objects/Loan_Version__c/fields/YM_Prepayment_Penalty_Description__c.field-meta.xml
<CustomField>
    <fullName>YM_Prepayment_Penalty_Description__c</fullName>
    <label>YM / Prepayment Penalty Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>