force-app/main/default/objects/Loan_Version__c/recordTypes/Loan_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Loan_Agreement</fullName>
    <active>true</active>
    <label>Loan Agreement</label>
</RecordType>