force-app/main/default/objects/Loan_Version__c/recordTypes/Loan_Version.recordType-meta.xml
<RecordType>
    <fullName>Loan_Version</fullName>
    <active>true</active>
    <label>Loan Version</label>
</RecordType>