force-app/main/default/objects/Loan_Version__c/recordTypes/LoanOnboarding.recordType-meta.xml
<RecordType>
    <fullName>LoanOnboarding</fullName>
    <active>true</active>
    <label>Loan Onboarding</label>
</RecordType>