force-app/main/default/objects/Loan_Version__c/recordTypes/Schedule_of_Lender_Cost.recordType-meta.xml
<RecordType>
    <fullName>Schedule_of_Lender_Cost</fullName>
    <active>true</active>
    <label>Schedule of Lender Cost</label>
</RecordType>