force-app/main/default/objects/Loan_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Term__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CloseDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>